# mission-center

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.disabled  .gitmodules  AppImageBuilder.yml  Cargo.toml  README.md  bla.c  build.rs  gitlab-ci.yml.disabled  me.kicsyromy.MissionCenter.json  me.kicsyromy.MissionCenter.yaml  meson.build  meson_options.txt  mission-center.doap
data/hwdb/: generate_hwdb.py  meson.build
data/icons/: meson.build
gpud/: Cargo.toml  meson.build
gpud/src/: main.rs  shm.rs
proc_reader/: Cargo.toml  meson.build
proc_reader/src/: main.rs
resources/: meson.build  missioncenter.gresource.xml
resources/ui/: keyboard_shortcuts.blp  performance_cpu.blp  performance_page.blp  style.css  theme_selector.blp  window.blp
resources/ui/apps_page/: app.blp  app_entry.blp  column_header.blp  details_dialog.blp  list_item.blp  page.blp  pid_column.blp  process_entry.blp  section_header_entry.blp  stat_column.blp  stat_list_item.blp
resources/ui/performance_page/: cpu.blp  cpu_details.blp  disk.blp  disk_details.blp  disk_eject_failure_dialog.blp  disk_eject_failure_entry.blp  disk_eject_failure_row.blp  disk_smart_data_dialog.blp  disk_smart_data_entry.blp  disk_smart_failure_dialog.blp  fan.blp  fan_details.blp  gpu.blp  gpu_details.blp  memory.blp  memory_details.blp  memory_info_tooltip.blp  network.blp  network_details.blp  page.blp  summary_graph.blp
resources/ui/preferences/: checked_row.blp  page.blp  window.blp
resources/ui/process_column_view/: column_view_frame.blp  process_action_bar.blp  process_details_dialog.blp  service_action_bar.blp  service_details_dialog.blp
resources/ui/services_page/: details_dialog.blp  page.blp
resources/ui/widgets/: context_menu_button.blp  help_overlay.blp
src/: application.rs  graph_widget.rs  gtk_plotter_backend.rs  i18n.rs  list_cell.rs  main.rs  mem_composition_widget.rs  meson.build  performance_cpu.rs  performance_page.rs  skia_plotter_backend.rs  sys_info.rs  theme_selector.rs  window.rs
src/apps_page/: actions.rs  column_header.rs  details_dialog.rs  list_item.rs  mod.rs  model_entry.rs  pid_column.rs  row_model.rs  settings.rs  stat_column.rs  stat_list_item.rs  view_model.rs
src/apps_page/columns/: cpu.rs  drive.rs  gpu.rs  gpu_memory.rs  label_cell.rs  memory.rs  mod.rs  name.rs  name_cell.rs  network.rs  pid.rs  shared_memory.rs
src/apps_page/list_items/: app_entry.rs  mod.rs  process_entry.rs  section_header_entry.rs
src/apps_page/models/: apps.rs  base.rs  filter_list.rs  mod.rs  processes.rs  selection.rs  sort_list.rs  tree_list.rs
src/apps_page/view_models/: app_model.rs  mod.rs  process_model.rs  section_header_model.rs
src/cairo_plotter_backend/: mod.rs
src/common/: app.rs  process.rs  util.rs
src/graph_widget/: egl_context.rs  gl_context.rs  mod.rs  render_target.rs  skia_plotter_backend.rs
src/magpie_client/: client.rs  mod.rs  spawner.rs
src/neo_services_page/: actions.rs  details_dialog.rs  mod.rs  process_details_dialog.rs  row_model.rs  service_details_dialog.rs  settings.rs
src/neo_services_page/columns/: cpu.rs  drive.rs  gpu.rs  gpu_memory.rs  label_cell.rs  memory.rs  mod.rs  name.rs  name_cell.rs  network.rs  pid.rs  shared_memory.rs
src/neo_services_page/models/: apps.rs  base.rs  filter_list.rs  mod.rs  processes.rs  selection.rs  sort_list.rs  tree_list.rs
src/performance_page/: cpu.rs  disk.rs  disk_details.rs  eject_failure_dialog.rs  eject_failure_row.rs  fan.rs  gpu.rs  gpu_details.rs  memory.rs  mod.rs  network.rs  sata_smart_dialog_row.rs  smart_dialog.rs  smart_dialog_row.rs  summary_graph.rs
src/performance_page/widgets/: eject_failure_dialog.rs  eject_failure_row.rs  graph_widget.rs  mem_composition_widget.rs  mod.rs  sata_smart_dialog_row.rs  sidebar_drop_hint.rs  smart_data_dialog.rs  smart_dialog.rs  smart_dialog_row.rs  smart_failure_dialog.rs  smart_nvme_dialog_row.rs  smart_sata_dialog_row.rs
src/preferences/: checked_row_widget.rs  mod.rs  page.rs  switch_row.rs
src/process_tree/: column_view_frame.rs  mod.rs  process_action_bar.rs  process_details_dialog.rs  row_model.rs  service_action_bar.rs  service_details_dialog.rs  settings.rs  util.rs
src/process_tree/columns/: cpu.rs  drive.rs  gpu.rs  gpu_memory.rs  label_cell.rs  memory.rs  mod.rs  name.rs  name_cell.rs  network.rs  pid.rs  shared_memory.rs
src/process_tree/models/: apps.rs  base.rs  filter_list.rs  mod.rs  processes.rs  tree_list.rs
src/proto/: apps.proto  common.proto  ipc.proto  processes.proto
src/proxy/: Cargo.toml  meson.build
src/proxy/src/: apps.rs  main.rs  processes.rs
src/services_page/: context_menu_button.rs  details_dialog.rs  list_cell.rs  mod.rs  services_list_item.rs
src/sys_info/: disk_info.rs  gpu_info.rs  mem_info.rs  mod.rs  net_info.rs  network.rs
src/sys_info_v2/: app_info.rs  cpu_info.rs  disk_info.rs  gatherer.rs  gpu_info.rs  mem_info.rs  mod.rs  net_info.rs  proc_info.rs
src/sys_info_v2/common/: util.rs
src/sys_info_v2/dbus_interface/: apps.rs  arc_str_vec.rs  cpu_dynamic_info.rs  cpu_static_info.rs  disk_dynamic_info.rs  disk_info.rs  disk_static_info.rs  fan_info.rs  gpu_dynamic_info.rs  gpu_static_info.rs  mod.rs  processes.rs  service.rs
src/sys_info_v2/gatherer/: Cargo.toml  meson.build
src/sys_info_v2/gatherer/common/: apps.rs  cpu.rs  exit_code.rs  gpu.rs  mod.rs  processes.rs  running_apps.rs  shared_data.rs  util.rs
src/sys_info_v2/gatherer/common/ipc/: message.rs  mod.rs  shm.rs
src/sys_info_v2/gatherer/src/: apps.rs  cpu.rs  logging.rs  main.rs  processes.rs  utils.rs
src/sys_info_v2/gatherer/src/gpu/: mod.rs  vulkan_info.rs
src/sys_info_v2/gatherer_supervisor/: Cargo.toml
src/sys_info_v2/gatherer_supervisor/src/: main.rs
src/sys_info_v2/gatherer_v2/: Cargo.toml
src/sys_info_v2/gatherer_v2/common/: cpu.rs  exit_code.rs  mod.rs
src/sys_info_v2/gatherer_v2/src/: main.rs
src/sys_info_v2/proxy/: meson.build
src/sys_info_v2/proxy/src/: main.rs
src/sysinfo/: mod.rs
src/widgets/: context_menu_button.rs  list_cell.rs  mod.rs  theme_selector.rs
support/patches/gtk4/glad/: meson.build
(+144 files in other folders)
