[package]
name = "missioncenter"
version = "0.6.2"
edition = "2021"
build = "build.rs"

[dependencies]
arrayvec = "0.7"
adw = { package = "libadwaita", version = "0.7", features = ["v1_6"] }
dbus = { version = "0.9" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { package = "gtk4", version = "0.9", features = ["gnome_47"] }
libc = { version = "0.2" }
rand = "0.9.0-beta.1"
regex = { version = "1.10" }
rust-ini = { version = "0.21" }
static_assertions = { version = "1.1" }
textdistance = { version = "1.0" }

[dependencies.magpie-types]
path = "subprojects/magpie/types"

[dependencies.nng-c-sys]
version = "1.9.0-beta.2"
default-features = false

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"
codegen-units = 1
