[package]
name = "missioncenter"
version = "1.0.0"
edition = "2021"

[features]
skip-codegen = ["magpie-types/skip-codegen"]

[dependencies]
arrayvec = "0.7"
libc = "0.2"
nng-c = "1.10.1"
rand = "0.9.0-beta.1"
regex = "1.10"
rust-ini = "0.21"
textdistance = "1.0"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]

[dependencies.gettext-rs]
version = "0.7"
features = ["gettext-system"]

[dependencies.gtk]
package = "gtk4"
version = "0.9"
features = ["gnome_47"]

[dependencies.magpie-types]
path = "subprojects/magpie/types"

[dependencies.nng-c-sys]
version = "1.10"
default-features = false

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"
codegen-units = 1
