option('flatpak', type : 'boolean', value : false, description: 'Building for Flatpak')
option('skip-codegen', type : 'boolean', value : false, description: 'Skip generating sources from Protobuf files; use pre-generated sources instead')
option('cargo_env', type : 'array', value : [], description: 'Additional environment variables that should be set when running cargo')
