[package]
name = "proxy"
version = "0.2.4"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
lazy_static = { version = "1.4" }
libc = { version = "0.2" }
num_cpus = { version = "1" }
rust-ini = { version = "0.19" }
sha2 = { version = "0.10" }

[profile.release]
opt-level = 3
lto = true
