[package]
build = "build/build.rs"
name = "gatherer"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
arrayvec = { version = "0.7" }
ash = { version = "0.37" }
bincode = { version = "1.3" }
dbus = { version = "0.9" }
dbus-crossroads = { version = "0.5" }
drm = { version = "0.11.0" }
egl = { version = "0.2" }
gbm = { version = "0.14.0", default-features = false, features = ["drm-support"] }
lazy_static = { version = "1.4" }
libc = { version = "0.2" }
nix = { version = "0.27", features = ["user", "fs", "process"] }
rust-ini = { version = "0.20" }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
cargo-util = { version = "0.2" }
cc = { version = "1.0" }
flate2 = { version = "1.0" }
lazy_static = { version = "1.4" }
pkg-config = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }
tar = { version = "0.4" }
ureq = { version = "2.8" }

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"
